# aawaz-core

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: check-and-lint.yaml  test.yaml
backend/: Cargo.toml  fleet.toml
backend/migrations/2022-03-27-071714_create_basic_tables/: down.sql  up.sql
backend/src/: api_routes.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  traits.rs
backend/src/auth/: github.rs  google.rs  logout.rs  mod.rs  util.rs
backend/src/controllers/: app.rs  comment.rs  page.rs  user.rs
backend/src/models/: app.rs  comment.rs  oauth.rs  page.rs  users.rs
backend/src/test/fixtures/: comment.rs  page.rs  user.rs
backend/src/util/: error.rs
frontend/admin/: README.md
frontend/plugin/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.embed.config.js
frontend/plugin/src/: App.svelte  embed.ts  i18n.ts  main.ts
frontend/plugin/src/lang/: en.ts
frontend/plugin/src/lib/: Auth.svelte  Brand.svelte  (+3 more)
infra/ansible/: certbot.yml  postgresql.yml
infra/ansible/templates/: speako.service.j2
infra/tf/: main.tf  outputs.tf
migrations/2022-03-27-071714_create_basic_tables/: up.sql
src/: api_routes.rs  controllers.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  test.rs  traits.rs  util.rs
src/controllers/: app.rs  comment.rs  page.rs  user.rs  util.rs
src/models/: app.rs  comment.rs  page.rs  users.rs
src/test/fixtures/: app.rs  comment.rs  mod.rs  page.rs  user.rs
src/util/: error.rs
static/: index.html  main.js
