[package]
name = "aawaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
actix-files = "0.6.0"
log = "0.4"
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2","serde_json"] }
diesel_migrations =  { version = "=1.4.0", features = ["postgres"] }
derive_more = { version = "0.99.0", default-features = false, features = ["error", "display"] }
serde = { version = "=1.0.136", features = ["derive"] }
serde_json = "=1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }